refactor and new analyze notebook

--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "1ef9941165adf2c4",
    "metadata": {
     "ExecuteTime": {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "10d38c578b38814",
    "metadata": {
     "ExecuteTime": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3778bf5c-efeb-4f40-9ece-6792f62abbea",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4b50830b334892a9",
    "metadata": {
     "ExecuteTime": {
@@ -108,35 +108,7 @@
      "start_time": "2024-05-01T10:39:53.660807Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-07-23 22:15:11--  https://github.com/official-stockfish/Stockfish/releases/latest/download/stockfish-ubuntu-x86-64-avx512.tar\n",
-      "Loaded CA certificate '/etc/ssl/certs/ca-certificates.crt'\n",
-      "Resolving github.com (github.com)... 140.82.121.3\n",
-      "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://github.com/official-stockfish/Stockfish/releases/download/sf_16.1/stockfish-ubuntu-x86-64-avx512.tar [following]\n",
-      "--2024-07-23 22:15:11--  https://github.com/official-stockfish/Stockfish/releases/download/sf_16.1/stockfish-ubuntu-x86-64-avx512.tar\n",
-      "Reusing existing connection to github.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/20976138/a1684ee0-7dc3-4e9d-95f8-d25a2e7857cb?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240723%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240723T201511Z&X-Amz-Expires=300&X-Amz-Signature=375f0375123898d13441e7e47abbf6f8efc698cae8ad8c4e9dfc79452a366605&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=20976138&response-content-disposition=attachment%3B%20filename%3Dstockfish-ubuntu-x86-64-avx512.tar&response-content-type=application%2Foctet-stream [following]\n",
-      "--2024-07-23 22:15:11--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/20976138/a1684ee0-7dc3-4e9d-95f8-d25a2e7857cb?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240723%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240723T201511Z&X-Amz-Expires=300&X-Amz-Signature=375f0375123898d13441e7e47abbf6f8efc698cae8ad8c4e9dfc79452a366605&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=20976138&response-content-disposition=attachment%3B%20filename%3Dstockfish-ubuntu-x86-64-avx512.tar&response-content-type=application%2Foctet-stream\n",
-      "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-      "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 70287360 (67M) [application/octet-stream]\n",
-      "Saving to: ‘stockfish-ubuntu-x86-64-avx512.tar’\n",
-      "\n",
-      "stockfish-ubuntu-x8 100%[===================>]  67,03M  3,12MB/s    in 22s     \n",
-      "\n",
-      "2024-07-23 22:15:34 (3,11 MB/s) - ‘stockfish-ubuntu-x86-64-avx512.tar’ saved [70287360/70287360]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "![ ! -f $STOCKFISH_AVX512_TAR ] && wget $STOCKFISH_AVX512_URL\n",
     "![ ! -f $STOCKFISH_AVX512_EXE ] && tar -xf $STOCKFISH_AVX512_TAR"
@@ -144,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "03f3d440-3153-4afd-a63e-bff7933ec80d",
    "metadata": {},
    "outputs": [],
@@ -217,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "61bd8f21-f6ad-4cd5-9cf8-f2b2ca29d611",
    "metadata": {},
    "outputs": [],
@@ -243,12 +215,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
+   "id": "cfa709b6-90c6-4f4c-8760-02b775db42f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The directory already exists\n",
+      "Archive already downloaded.\n",
+      "Archive:  data/archives/lichess_elite_2021-11.zip\n",
+      "  inflating: data/elite_dataset/lichess_elite_2021-11.pgn  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create necessary data \n",
+    "# elite_dataset_tool.prepare_dataset(ELITE_DATABASE_URL, ELITE_DATASET_ARCHIVE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T09:56:50.114488Z",
      "start_time": "2024-05-01T09:56:50.110053Z"
+    },
+    "jupyter": {
+     "source_hidden": true
     }
    },
    "outputs": [],
@@ -303,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -311,25 +308,11 @@
      "start_time": "2024-05-01T12:19:43.542251Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/elite_dataset/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 86\u001b[0m\n\u001b[1;32m     83\u001b[0m                 result\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mint\u001b[39m(game\u001b[38;5;241m.\u001b[39mboard()\u001b[38;5;241m.\u001b[39mpieces(piece, side)))\n\u001b[1;32m     84\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(result)\n\u001b[0;32m---> 86\u001b[0m data_generator \u001b[38;5;241m=\u001b[39m \u001b[43mDataGenerator\u001b[49m\u001b[43m(\u001b[49m\u001b[43melite_dataset_tool\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSTOCKFISH_AVX512_EXE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mskip\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m7000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_limit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[50], line 4\u001b[0m, in \u001b[0;36mDataGenerator.__init__\u001b[0;34m(self, dataset_tool, engine_path, pos_limit, skip, avoid_repetitions)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset_tool : DatasetTool, engine_path : \u001b[38;5;28mstr\u001b[39m, pos_limit : \u001b[38;5;28mint\u001b[39m, skip : \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, avoid_repetitions : \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpgn_file \u001b[38;5;241m=\u001b[39m \u001b[43mdataset_tool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset_file_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpos_limit \u001b[38;5;241m=\u001b[39m pos_limit\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mskip \u001b[38;5;241m=\u001b[39m skip\n",
-      "Cell \u001b[0;32mIn[42], line 61\u001b[0m, in \u001b[0;36mDatasetTool.dataset_file_name\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdataset_file_name\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 61\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroot_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     63\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m x), files))     \n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m file[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/elite_dataset/'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class DataGenerator:\n",
     "\n",
-    "    def __init__(self, dataset_tool : DatasetTool, engine_path : str, pos_limit : int, skip : int = 0, avoid_repetitions : bool = True):\n",
+    "    def __init__(self, dataset_tool : DatasetTool, engine_path : str, pos_limit : int, skip : int = 0, avoid_repetitions : bool = True, e : bool = False):\n",
     "        self.pgn_file = dataset_tool.dataset_file_name()\n",
     "        self.pos_limit = pos_limit\n",
     "        self.skip = skip\n",
@@ -342,9 +325,10 @@
     "        self.engine = chess.engine.SimpleEngine.popen_uci(engine_path)\n",
     "        self.engine.configure({\"Threads\" : 12, \"Hash\" : 1024})\n",
     "        self.dataset_tool = dataset_tool\n",
+    "        self.eval = e\n",
     "\n",
     "    def write(self):\n",
-    "        out_file = self.dataset_tool.create_bitboard_path(self.pos_limit, self.skip)\n",
+    "        out_file = self.dataset_tool.create_bitboard_path(self.pos_limit, self.skip, depth_min=0, depth_max=0)\n",
     "        print(\"Writing header...\")\n",
     "        self.write_header(out_file)\n",
     "        print(\"Done\")\n",
@@ -381,29 +365,39 @@
     "                    header.append(curr_piece)\n",
     "        header += [\"score\", \"draw\", \"fen\"]\n",
     "        with open(out_file, \"w\") as f:\n",
-    "            f.write(\";\".join(header) + \"\\n\")\n",
+    "            f.write(\",\".join(header) + \"\\n\")\n",
     "\n",
     "    def write_pos(self, out_file : str, game : chess.pgn.Game) -> int:\n",
     "        content = []\n",
     "        bitboards = self.pgn_to_bitboard(game)\n",
     "        if bitboards in self.signatures:\n",
     "            return 0\n",
-    "        self.signatures.add(bitboards)        \n",
+    "        self.signatures.add(bitboards)       \n",
+    "        for bitboard in bitboards:\n",
+    "            content.append(str(bitboard))\n",
+    "            \n",
+    "\n",
+    "        if self.eval: \n",
+    "            score = self.evaluate(game)\n",
+    "            draw = self.predicate(score)\n",
+    "            content += [str(score), str(draw), fen]\n",
+    "            \n",
+    "        with open(out_file, \"a\") as f:\n",
+    "            f.write(\",\".join(content) + \"\\n\")\n",
+    "        self.pos_written += 1\n",
+    "        return 1\n",
+    "\n",
+    "    def evaluate(self, game):\n",
     "        info = self.engine.analyse(game.board(), chess.engine.Limit(time=0))\n",
     "        score = info['score']\n",
     "        if score.is_mate():\n",
     "            return 0\n",
     "        fen = game.board().fen()\n",
-    "        score = score.relative.score()\n",
-    "        draw = 1 if -50 <= score <= 50 else 0\n",
+    "        return score.relative.score()\n",
+    "\n",
+    "    def predicate(self, score):\n",
+    "        return 1 if -50 <= score <= 50 else 0\n",
     "        \n",
-    "        for bitboard in bitboards:\n",
-    "            content.append(str(bitboard))\n",
-    "        content += [str(score), str(draw), fen]\n",
-    "        with open(out_file, \"a\") as f:\n",
-    "            f.write(\";\".join(content) + \"\\n\")\n",
-    "        self.pos_written += 1\n",
-    "        return 1\n",
     "    \n",
     "    def pgn_to_bitboard(self, game : chess.pgn.Game) -> tuple[int]:\n",
     "        result = []\n",
@@ -411,8 +405,52 @@
     "            for piece in chess.PIECE_TYPES:\n",
     "                result.append(int(game.board().pieces(piece, side)))\n",
     "        return tuple(result)\n",
-    "\n",
-    "data_generator = DataGenerator(elite_dataset_tool, STOCKFISH_AVX512_EXE, skip=7000, pos_limit=10000)"
+    "0\n",
+    "data_generator = DataGenerator(elite_dataset_tool, STOCKFISH_AVX512_EXE, pos_limit=1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b0060946-e0ff-4010-b09a-0e3cfe6f9048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing header...\n",
+      "Done\n",
+      "Writing boards...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cbea8bb1852b46ad8375ecaf8d8501aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Positions:   0%|          | 0/1000000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "Read 1165311 positions total\n",
+      "Written 1000000 positions\n",
+      "Games : 14474\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_generator.write()"
    ]
   },
   {
