fix bug: bitboard to nn input

--- a/nn/train.ipynb
+++ b/nn/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -20,11 +20,8 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from math import ceil\n",
     "from tqdm.notebook import tqdm\n",
-    "from copy import deepcopy \n",
-    "from tabulate import tabulate\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from collections import namedtuple\n",
@@ -33,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "fe9d0fda-f33e-4313-850b-f3b640d2c201",
    "metadata": {},
    "outputs": [],
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b13750a6be5e8a69",
    "metadata": {
     "ExecuteTime": {
@@ -93,10 +90,10 @@
     {
      "data": {
       "text/plain": [
-       "device(type='cuda')"
+       "device(type='cpu')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "91dc98ff-9857-4ec6-9c98-9550feba6472",
    "metadata": {},
    "outputs": [
@@ -141,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Allocated: 52M\n",
-      "Reserved: 67M\n"
+      "Allocated: 0\n",
+      "Reserved: 0\n"
      ]
     }
    ],
@@ -168,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "608b0930c754cabd",
    "metadata": {
     "ExecuteTime": {
@@ -197,15 +194,15 @@
     "        return self.bitboards[idx], self.is_draw[idx]\n",
     "\n",
     "    def bitboards_to_layers(self, bitboards):\n",
-    "        return np.unpackbits(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1).astype(np.single)\n",
+    "        return np.unpackbits(np.flip(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
     "\n",
     "    def binary_features_to_layers(self, features):\n",
-    "        return np.unpackbits(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1).astype(np.single)"
+    "        return np.unpackbits(np.flip(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1), axis=1).astype(np.single)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e65a3c3f-e7a9-4c4f-96a6-9f5a53a8f947",
    "metadata": {},
    "outputs": [],
@@ -247,10 +244,10 @@
     "        return self.bitboards[idx], self.is_draw[idx]\n",
     "\n",
     "    def bitboards_to_layers(self, bitboards):\n",
-    "        return np.unpackbits(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1).astype(np.single)\n",
+    "        return np.unpackbits(np.flip(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
     "\n",
     "    def binary_features_to_layers(self, features):\n",
-    "        return np.unpackbits(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1).astype(np.single)\n",
+    "        return np.unpackbits(np.flip(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
     "\n",
     "    def load_data(self):\n",
     "        if self.curr_batch == 0 and self.shuffle:\n",
@@ -282,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b4677c52-9176-442b-97dc-b533b2a3edbb",
    "metadata": {},
    "outputs": [],
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "13d423b5aec85db4",
    "metadata": {
     "ExecuteTime": {
@@ -376,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "87ecc2ce56ba7086",
    "metadata": {
     "ExecuteTime": {
@@ -570,15 +567,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "312630a8-dcbf-4dba-a0b6-e1a33f3e929a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model = DenseNetwork(3, [768, 2**14, 2**11, 2**8, 1])\n",
-    "model = DenseNetwork(2, [768, 256, 128, 1])\n",
-    "# model = DenseNetwork(0, [768, 1])\n",
-    "# model.load_state_dict(torch.load(\"models/1M/1l/Dense_768_768_1_b512_e8_lr0.001_m0.9_acc76.14\", map_location=\"cpu\"))"
+    "# model = DenseNetwork(2, [768, 256, 128, 1])\n",
+    "model = DenseNetwork(1, [768, 768, 1])\n",
+    "model.load_state_dict(torch.load(\"models/1M/1l/Dense_768_768_1_b512_e49_lr0.01_m0.9_acc83.33\", map_location=\"cpu\"))"
    ]
   },
   {
@@ -1126,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "bcb51abc-7c85-47e2-9397-2a6982466a80",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1156,7 @@
     "        param_data = param.detach().cpu().numpy()\n",
     "        df = pd.DataFrame(param_data)\n",
     "        filename = f\"{layer_name}_{param_type}.csv\"\n",
-    "        df.to_csv(os.path.join(directory, filename), index=False)\n",
+    "        df.to_csv(os.path.join(directory, filename), header=None, index=False)\n",
     "\n",
     "    print(f\"All weights and biases have been saved to the '{directory}' directory.\")\n",
     "\n",
