fix bitboard to nn input

--- a/nn/train.ipynb
+++ b/nn/train.ipynb
@@ -200,10 +200,13 @@
     "        return self.bitboards[idx], self.is_draw[idx]\n",
     "\n",
     "    def bitboards_to_layers(self, bitboards):\n",
-    "        return np.unpackbits(np.flip(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
+    "        cont = np.ascontiguousarray(np.expand_dims(bitboards.to_numpy(), 2)).view(np.uint8)\n",
+    "        return np.unpackbits(np.flip(cont, axis=2), axis=2).astype(np.single).reshape(-1, 768)\n",
     "\n",
     "    def binary_features_to_layers(self, features):\n",
-    "        return np.unpackbits(np.flip(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1), axis=1).astype(np.single)"
+    "        i = (features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff\n",
+    "        cont = np.ascontiguousarray(np.expand_dims(i, 2)).view(np.uint8)\n",
+    "        return np.unpackbits(np.flip(cont, axis=2), axis=2).astype(np.single).reshape(-1, 768)"
    ]
   },
   {
@@ -250,11 +253,14 @@
     "        return self.bitboards[idx], self.is_draw[idx]\n",
     "\n",
     "    def bitboards_to_layers(self, bitboards):\n",
-    "        return np.unpackbits(np.flip(np.ascontiguousarray(bitboards.to_numpy()).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
+    "        cont = np.ascontiguousarray(np.expand_dims(bitboards.to_numpy(), 2)).view(np.uint8)\n",
+    "        return np.unpackbits(np.flip(cont, axis=2), axis=2).astype(np.single).reshape(-1, 768)\n",
     "\n",
     "    def binary_features_to_layers(self, features):\n",
-    "        return np.unpackbits(np.flip(np.ascontiguousarray((features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff).view(np.uint8), axis=1), axis=1).astype(np.single)\n",
-    "\n",
+    "        i = (features.to_numpy(dtype=np.uint64) - 1) ^ 0xffffffffffffffff\n",
+    "        cont = np.ascontiguousarray(np.expand_dims(i, 2)).view(np.uint8)\n",
+    "        return np.unpackbits(np.flip(cont, axis=2), axis=2).astype(np.single).reshape(-1, 768)\n",
+    "        \n",
     "    def load_data(self):\n",
     "        if self.curr_batch == 0 and self.shuffle:\n",
     "            np.random.shuffle(self.indices)\n",
@@ -553,15 +559,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "312630a8-dcbf-4dba-a0b6-e1a33f3e929a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model = DenseNetwork(3, [768, 2**14, 2**11, 2**8, 1])\n",
     "# model = DenseNetwork(2, [768, 256, 128, 1])\n",
     "model = DenseNetwork(1, [768, 768, 1])\n",
-    "# model.load_state_dict(torch.load(\"models/1M/1l/Dense_768_768_1_b512_e49_lr0.01_m0.9_acc83.33\", map_location=\"cpu\"))"
+    "model.load_state_dict(torch.load(\"models/1M/1l/Dense_768_768_1_b512_e49_lr0.01_m0.9_acc83.34\", map_location=\"cpu\"))"
    ]
   },
   {
@@ -1383,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "bcb51abc-7c85-47e2-9397-2a6982466a80",
    "metadata": {},
    "outputs": [
